k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-data-hunt
  namespace: agents
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hunt.data.lisacorp.com
    secretName: data-hunt-app-tls
  rules:

   - host: hunt.data.lisacorp.com
     http:
       paths:
         - pathType: Prefix
           path: /
           backend:
             service:
               name: data-hunt-service
               port:
                 number: 80
